--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,5 +4,5 @@
 
 @font-face {
   font-family: "Open Sans";
-  src: url("../public/fonts/OpenSans-Regular.ttf");
+  src: url("../public/fonts/OPENSANS-REGULAR.TTF");
 }
