--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,5 +5,109 @@
 @font-face {
   font-family: "wotfardregular";
   src: url("../public/fonts/wotfard-regular-webfont.ttf");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "wotfardbold";
+  src: url("../public/fonts/wotfard-bold-webfont.ttf");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "wotfardextralight";
+  src: url("../public/fonts/wotfard-extralight-webfont.ttf");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "wotfardlight";
+  src: url("../public/fonts/wotfard-light-webfont.ttf");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "wotfardmedium";
+  src: url("../public/fonts/wotfard-medium-webfont.ttf");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "wotfardsemibold";
+  src: url("../public/fonts/wotfard-semibold-webfont.ttf");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "wotfardthin";
+  src: url("../public/fonts/wotfard-thin-webfont.ttf");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "wotfardbold_italic";
+  src: url("../public/fonts/wotfard-bolditalic-webfont.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "wotfardextralight_italic";
+  src: url("../public/fonts/wotfard-extralightitalic-webfont.ttf")
+    format("truetype");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "wotfardlight_italic";
+  src: url("../public/fonts/wotfard-lightitalic-webfont.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "wotfardmedium_italic";
+  src: url("../public/fonts/wotfard-mediumitalic-webfont.ttf")
+    format("truetype");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "wotfardregular_italic";
+  src: url("../public/fonts/wotfard-regularitalic-webfont.ttf")
+    format("truetype");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "wotfardsemibold_italic";
+  src: url("../public/fonts/wotfard-semibolditalic-webfont.ttf")
+    format("truetype");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "wotfardthin_italic";
+  src: url("../public/fonts/wotfard-thinitalic-webfont.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
   font-display: swap;
 }
