--- a/styles/globals.css
+++ b/styles/globals.css
@@ -111,3 +111,11 @@
   font-style: normal;
   font-display: swap;
 }
+
+@font-face {
+  font-family: "FiraCode-Regular";
+  src: url("../public/fonts/FiraCode-Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
